Avancement du 4 Feb 2019
Co-Authored-By: skyterstrike <skyterstrike@users.noreply.github.com>

--- a/ui/css/layout.less
+++ b/ui/css/layout.less
@@ -5,7 +5,8 @@ body {
     color: #afb0b2;
 
 
-    #L_form {
+    #L_form,
+    #R_form {
         padding: 10px;
         label {
             display: block;
@@ -15,7 +16,8 @@ body {
                 line-height: 20px;
             }
         }
-        #L_message {
+        #L_message,
+        #R_message {
             display: block;
         }
 
