Avancement du 8 Feb 2019
Co-Authored-By: skyterstrike <skyterstrike@users.noreply.github.com>

--- a/ui/css/layout.less
+++ b/ui/css/layout.less
@@ -3,10 +3,13 @@
 body {
     background-color: #2f3136;
     color: #afb0b2;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 
     #L_form,
-    #R_form {
+    #R_form,
+    #UP_form,
+    #UA_form {
         padding: 10px;
         label {
             display: block;
@@ -21,5 +24,14 @@ body {
             display: block;
         }
 
+    }
+    #membersList {
+        form {
+            display: inline;
+
+            input {
+                display: inline;
+            }
+        }
     }
 }
