Avancement du 13 Feb 19
Co-Authored-By: skyterstrike <skyterstrike@users.noreply.github.com>

--- a/ui/css/layout.less
+++ b/ui/css/layout.less
@@ -34,4 +34,16 @@ body {
             }
         }
     }
+
+    table {
+        border: 1px solid #afb0b2;
+
+        tr, th {
+            border: 1px solid #afb0b2;
+
+            td {                
+                border: 1px solid #afb0b2;
+            }
+        }
+    }
 }
