--- a/ui/css/styles.less
+++ b/ui/css/styles.less
@@ -49,3 +49,37 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+table {
+	border: 1px solid #afb0b2;
+
+	tr, th {
+		border: 1px solid #afb0b2;
+
+		td {                
+			border: 1px solid #afb0b2;
+		}
+	}
+}
+sub {
+	position: relative;
+	bottom: 1px;
+	font-size: .8em;
+	line-height: .8em;
+	vertical-align:super;
+	text-decoration:none;
+}
+b {
+	font-weight: bold;
+}
+
+*:disabled {
+	cursor: no-drop
+}
+img.emojis {
+	vertical-align: sub;
+}
+img.avatars {
+	vertical-align: sub;
+}
